--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 *.exe
 *.o
+.vscode
 CodeChef Problems/CODUO 2022/temp.cpp
+Codeforces Problems/Codeforces Round \#787 (Div. 3)/tempCodeRunnerFile.cpp
